--- a/index.html
+++ b/index.html
@@ -1,31 +1,67 @@
 <!DOCTYPE html>
 <html>
+	<link rel="stylesheet" href="./css/mainstyle.css">
 	<head>
-		<title>HTML Cheat Sheet</title>>
+		<title>Terell Bernard Davis</title>
 	</head>
 	<body>
-		<!-- Headings -->
+		<header>
+			<h1>Test Title</h1>
+		</header>
+		<nav id="languages">
+			<div class="lan">
+				<ul>
+					<li><a href="#">Java</a></li>
+					<li><a href="#">Python</a></li>
+					<li><a href="#">HTML/CSS</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+			</div>
+		</nav>
+		<hr>
+
 		<h1>Heading One</h1>
-		<h2>Heading Two</h2>
-		<h3>Heading Three</h3>
-		<h4>Heading Four</h4>
+		<div class="info">
+			<p title="Bio" class="info">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt d labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+		</div>
+
+		<h1>Heading Two</h1>
+		<div class="info">
+			<p title="Test1" class="info">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+		</div>
+
+		<h1>Heading Three</h1>
+		<div class="info">
+			<p title="Test2">
+			</p>
+		</div>
+
+		<h1>Heading Four</h1>
+		<div class="info">
+			<p title="Test2">
+			</p>
+		</div>
+
+		<div></div>
 		
-		<!-- Paragraph -->
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</p>
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</p>
+		<a href="#" target="_blank">Test Link</a>
+		
+		
+		<hr>
+		<!-- Comment -->
 	</body>
 </html>
