--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
 		<header>
 			<h1>Test Title</h1>
 		</header>
-		<nav id="languages">
-			<div class="lan">
-				<ul>
-					<li><a href="#">Java</a></li>
-					<li><a href="#">Python</a></li>
-					<li><a href="#">HTML/CSS</a></li>
-					<li><a href="#">Contact</a></li>
-				</ul>
+
+		<div class="navbar">
+			<a href="#">Home</a>
+			<div class="dropdown">
+				<button class="dropbtn" onclick="dropdown()">Java
+				<i class="fa fa-caret-down"></i>
+			</button>
+				<div class="dropcontent" id="mydropdown">
+					<a href="#">JokerBot</a>
+					<a href="#">Invoice Maker</a>
+				</div>
+					</div>
 			</div>
-		</nav>
+		</div>
 		<hr>
 
 		<h1>Heading One</h1>
@@ -55,13 +59,9 @@
 			<p title="Test2">
 			</p>
 		</div>
-
-		<div></div>
-		
-		<a href="#" target="_blank">Test Link</a>
-		
-		
-		<hr>
-		<!-- Comment -->
+		<footer id="footer">
+			<p>Copyright &copy; My Starting Website</p>
+		</footer>
+		<script src="main.js"></script>
 	</body>
 </html>
