--- a/index.html
+++ b/index.html
@@ -12,15 +12,21 @@
 		<div class="navbar">
 			<a href="#">Home</a>
 			<div class="dropdown">
-				<button class="dropbtn" onclick="dropdown()">Java
-				<i class="fa fa-caret-down"></i>
+				<button class="dropbtn" onclick="dropdown(this)">Java
 			</button>
 				<div class="dropcontent" id="mydropdown">
 					<a href="#">JokerBot</a>
 					<a href="#">Invoice Maker</a>
 				</div>
+				<button class="dropbtn" onclick="dropdown(this)">Python
+				</button>
+					<div class="dropcontent" id="mydropdown">
+						<a href="#">Narukami</a>
+						<a href="#">Test</a>
+					</div>
 					</div>
 			</div>
+			
 		</div>
 		<hr>
 
