--- a/index.html
+++ b/index.html
@@ -10,60 +10,70 @@
 		</header>
 
 		<div class="navbar">
-			<a href="#">Home</a>
+			<a href="https://terell-davis.github.io">Home</a>
+
 			<div class="dropdown">
-				<button class="dropbtn" onclick="dropdown(this)">Java
-			</button>
-				<div class="dropcontent" id="mydropdown">
-					<a href="#">JokerBot</a>
-					<a href="#">Invoice Maker</a>
+				<button class="dropbtn" target="_blank">Java</button>
+				<div class="dropcontent">
+					<a href="https://github.com/Terell-Davis/JokerBot" target="_blank">JokerBot</a>
+					<a href="https://github.com/Terell-Davis/GSUTechCorner" target="_blank">Invoice Maker</a>
 				</div>
-				<button class="dropbtn" onclick="dropdown(this)">Python
-				</button>
-					<div class="dropcontent" id="mydropdown">
-						<a href="#">Narukami</a>
-						<a href="#">Test</a>
-					</div>
+			</div>
+
+			<div class="dropdown">
+				<button class="dropbtn">Python</button>
+					<div class="dropcontent">
+						<a href="https://github.com/Terell-Davis/NarukamiBot" target="_blank">NarukamiBot</a>
+						<a href="https://github.com/Terell-Davis/UPC-CheckDigit" target="_blank">UPC-CheckDigit</a>
 					</div>
 			</div>
-			
-		</div>
-		<hr>
 
-		<h1>Heading One</h1>
-		<div class="info">
-			<p title="Bio" class="info">
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt d labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			</p>
+			<div class="dropdown">
+				<button class="dropbtn">HTML/CSS</button>
+				<div class="dropcontent">
+					<a href="https://github.com/Terell-Davis/terell-davis.github.io" target="_blank">terell-davis</a>
+				</div>
+			</div>
 		</div>
 
-		<h1>Heading Two</h1>
-		<div class="info">
-			<p title="Test1" class="info">
+		<div class="card">
+			<hr>
+			<h1 class="subjects">Bio</h1>
+			<div class="info">
+				<p title="Bio" class="info">
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				tempor incididunt d labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			</p>
-		</div>
+				</p>
+			</div>
 
-		<h1>Heading Three</h1>
-		<div class="info">
-			<p title="Test2">
-			</p>
-		</div>
+			<h1 class="subjects">Skills</h1>
+			<div class="info">
+				<p title="Test1" class="info">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				</p>
+			</div>
 
-		<h1>Heading Four</h1>
-		<div class="info">
-			<p title="Test2">
-			</p>
+			<h1 class="subjects">Education</h1>
+			<div class="info">
+				<p title="Test2">
+				</p>
+			</div>
+
+			<h1 class="subjects">Experience</h1>
+			<div class="info">
+				<p title="Test2">
+				</p>
+			</div>
+			<hr>
 		</div>
 		<footer id="footer">
 			<p>Copyright &copy; My Starting Website</p>
