--- a/index.html
+++ b/index.html
@@ -1,37 +1,21 @@
 <!DOCTYPE html>
 <html>
-	<link rel="stylesheet" href="./css/mainstyle.css">
+	<link rel="stylesheet" href="/css/mainstyle.css">
 	<head>
 		<title>Terell Bernard Davis</title>
 	</head>
 	<body>
 		<header>
-			<h1>Test Title</h1>
+			<h1>Terell B. Davis</h1>
 		</header>
 
 		<div class="navbar">
-			<a href="https://terell-davis.github.io">Home</a>
-
+			<a href="/index.html">Home</a>
 			<div class="dropdown">
-				<button class="dropbtn" target="_blank">Java</button>
+				<button class="dropbtn" target="_blank">Projects</button>
 				<div class="dropcontent">
-					<a href="https://github.com/Terell-Davis/JokerBot" target="_blank">JokerBot</a>
-					<a href="https://github.com/Terell-Davis/GSUTechCorner" target="_blank">Invoice Maker</a>
-				</div>
-			</div>
-
-			<div class="dropdown">
-				<button class="dropbtn">Python</button>
-					<div class="dropcontent">
-						<a href="https://github.com/Terell-Davis/NarukamiBot" target="_blank">NarukamiBot</a>
-						<a href="https://github.com/Terell-Davis/UPC-CheckDigit" target="_blank">UPC-CheckDigit</a>
-					</div>
-			</div>
-
-			<div class="dropdown">
-				<button class="dropbtn">HTML/CSS</button>
-				<div class="dropcontent">
-					<a href="https://github.com/Terell-Davis/terell-davis.github.io" target="_blank">terell-davis</a>
+					<a href="/projects/java.html">Java</a>
+					<a href="/projects/python.html">Python</a>
 				</div>
 			</div>
 		</div>
@@ -65,19 +49,32 @@
 			<h1 class="subjects">Education</h1>
 			<div class="info">
 				<p title="Test2">
+					According to all known laws of aviation, there is no way a bee should be able to fly. 
+					Its wings are too small to getits fat little body off the ground. The bee, of course, flies anyway because bees don't care
+					what humans think is impossible. Yellow, black. Yellow, black. Yellow, black. Yellow, black. Ooh, black and yellow! Let's shake it up a little.
+					Barry! Breakfast is ready! Ooming! Hang on a second. Hello? - Barry? - Adam? - Oan you believe this is happening? - I can't. I'll pick you up.
+					Looking sharp. Use the stairs. Your father paid good money for those. Sorry. I'm excited. Here's the graduate. We're very proud of you, son.
+					A perfect report card, all B's. Very proud. Ma! I got a thing going here. - You got lint on your fuzz. - Ow! That's me!
+
 				</p>
 			</div>
 
 			<h1 class="subjects">Experience</h1>
 			<div class="info">
 				<p title="Test2">
+					- Wave to us! We'll be in row 118,000. - Bye! Barry, I told you, stop flying in the house! - Hey, Adam. - Hey, Barry. - Is that fuzz gel?
+					- A little. Special day, graduation. Never thought I'd make it. Three days grade school, three days high school. Those were awkward.
+					Three days college. I'm glad I took a day and hitchhiked around the hive. You did come back different. - Hi, Barry. - Artie, growing a mustache? Looks good.
+					- Hear about Frankie? - Yeah. - You going to the funeral? - No, I'm not going. Everybody knows, sting someone, you die. Don't waste it on a squirrel.
+					Such a hothead. I guess he could have just gotten out of the way. I love this incorporating an amusement park into our day.
+					That's why we don't need vacations. Boy, quite a bit of pomp... under the circumstances. - Well, Adam, today we are men. - We are!
+					- Bee-men. - Amen! Hallelujah!
 				</p>
 			</div>
 			<hr>
 		</div>
 		<footer id="footer">
-			<p>Copyright &copy; My Starting Website</p>
+			<p>Copyright &copy; I dont know what to put here yet</p>
 		</footer>
-		<script src="main.js"></script>
 	</body>
 </html>
