added html/css page, added icons folder

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 				<div class="dropcontent">
 					<a href="/projects/java.html">Java</a>
 					<a href="/projects/python.html">Python</a>
+					<a href="/projects/webdev.html">HTML/CSS</a>
 				</div>
 			</div>
 		</div>
