--- a/projects/python.html
+++ b/projects/python.html
@@ -15,7 +15,8 @@
 				<button class="dropbtn" target="_blank">Projects</button>
 				<div class="dropcontent">
 					<a href="/projects/java.html">Java</a>
-					<a href="/projects/python.html">Python</a>
+                    <a href="/projects/python.html">Python</a>
+                    <a href="/projects/webdev.html">HTML/CSS</a>
 				</div>
 			</div>
 		</div>
@@ -23,6 +24,17 @@
 		<div class="card">
 			<hr>
 			<h1 class="subjects">NarukamiBot</h1>
+			<div class="info">
+				<p title="Bio" class="info">
+                    Students, faculty, distinguished bees, please welcome Dean Buzzwell. Welcome, New Hive Oity graduating class of...
+                    ...9:15. That concludes our ceremonies. And begins your career at Honex Industries! Will we pick ourjob today?
+                    I heard it's just orientation. Heads up! Here we go. Keep your hands and antennas inside the tram at all times.
+                    - Wonder what it'll be like? - A little scary. Welcome to Honex, a division of Honesco and a part of the Hexagon Group.
+                    This is it! Wow. Wow. We know that you, as a bee, have worked your whole life to get to the point where you can work for your whole life.	
+				</p>
+            </div>
+            
+            <h1 class="subjects">Barcode CheckDigit</h1>
 			<div class="info">
 				<p title="Bio" class="info">
                     Students, faculty, distinguished bees, please welcome Dean Buzzwell. Welcome, New Hive Oity graduating class of...
