--- a/projects/webdev.html
+++ b/projects/webdev.html
@@ -2,11 +2,11 @@
 <html>
 	<link rel="stylesheet" href="/css/mainstyle.css">
 	<head>
-		<title>Java Projects</title>
+		<title>HTML/CSS</title>
 	</head>
 	<body>
 		<header>
-			<h1>Java Projects</h1>
+			<h1>HTML/CSS</h1>
 		</header>
 
 		<div class="navbar">
@@ -23,7 +23,7 @@
 
 		<div class="card">
 			<hr>
-			<h1 class="subjects">JokerBot</h1>
+			<h1 class="subjects">terell-davis.github.io</h1>
 			<div class="info">
 				<p title="Bio" class="info">
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -34,18 +34,6 @@
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 				</p>
             </div>
-            
-            <h1 class="subjects">SalesSheet</h1>
-			<div class="info">
-				<p title="Bio" class="info">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt d labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				</p>
-			</div>
 			<hr>
 		</div>
 		<footer id="footer">
