--- a/index.html
+++ b/index.html
@@ -26,43 +26,18 @@
 			<h1 class="subjects">Bio</h1>
 			<div class="info">
 				<p title="Bio" class="info">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt d labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				</p>
-			</div>
-
-			<h1 class="subjects">Skills</h1>
-			<div class="info">
-				<p title="Test1" class="info">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				</p>
-			</div>
-
-			<h1 class="subjects">Education</h1>
-			<div class="info">
-				<p title="Test2">
 					According to all known laws of aviation, there is no way a bee should be able to fly. 
 					Its wings are too small to getits fat little body off the ground. The bee, of course, flies anyway because bees don't care
 					what humans think is impossible. Yellow, black. Yellow, black. Yellow, black. Yellow, black. Ooh, black and yellow! Let's shake it up a little.
 					Barry! Breakfast is ready! Ooming! Hang on a second. Hello? - Barry? - Adam? - Oan you believe this is happening? - I can't. I'll pick you up.
 					Looking sharp. Use the stairs. Your father paid good money for those. Sorry. I'm excited. Here's the graduate. We're very proud of you, son.
 					A perfect report card, all B's. Very proud. Ma! I got a thing going here. - You got lint on your fuzz. - Ow! That's me!
-
 				</p>
 			</div>
 
-			<h1 class="subjects">Experience</h1>
+			<h1 class="subjects">Skills & Experience</h1>
 			<div class="info">
-				<p title="Test2">
+				<p title="Test1" class="info">
 					- Wave to us! We'll be in row 118,000. - Bye! Barry, I told you, stop flying in the house! - Hey, Adam. - Hey, Barry. - Is that fuzz gel?
 					- A little. Special day, graduation. Never thought I'd make it. Three days grade school, three days high school. Those were awkward.
 					Three days college. I'm glad I took a day and hitchhiked around the hive. You did come back different. - Hi, Barry. - Artie, growing a mustache? Looks good.
