--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 		<div class="navbar">
 			<a href="/index.html">Home</a>
+
 			<div class="dropdown">
 				<button class="dropbtn" target="_blank">Projects</button>
 				<div class="dropcontent">
@@ -19,6 +20,7 @@
 					<a href="/projects/webdev.html">HTML/CSS</a>
 				</div>
 			</div>
+			
 		</div>
 
 		<div class="card">
@@ -52,5 +54,7 @@
 		<footer id="footer">
 			<p>Copyright &copy; I dont know what to put here yet</p>
 		</footer>
+
+		<script src="theme-switch.js"></script>
 	</body>
 </html>
