Add Themes & Theme switch button, suavemente.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 					<a href="/projects/webdev.html">HTML/CSS</a>
 				</div>
 			</div>
+
+			<button id="theme-switch">Change Theme</button>
 			
 		</div>
 
