Changd Theme Switch to a drop down

--- a/index.html
+++ b/index.html
@@ -21,8 +21,16 @@
 				</div>
 			</div>
 
-			<button id="theme-switch">Change Theme</button>
-			
+			<div class="dropdown theme-switch-drop">
+				<button class="dropbtn" id="theme-switch">Change Theme</button>
+					<div class="dropcontent" id="theme-menu">
+				  		<a href="#" data-theme="default">Default</a>
+				  		<a href="#" data-theme="light-theme">Light Theme</a>
+				  		<a href="#" data-theme="purple-theme">Purple Theme</a>
+				  		<a href="#" data-theme="armour-theme">Armour Theme</a>
+						<a href="#" data-theme="simpatico-theme">Simpatico Theme</a>
+					</div>
+			</div>		  
 		</div>
 
 		<div class="card">
