--- a/projects/java.html
+++ b/projects/java.html
@@ -11,14 +11,26 @@
 
 		<div class="navbar">
 			<a href="/index.html">Home</a>
+
 			<div class="dropdown">
 				<button class="dropbtn" target="_blank">Projects</button>
 				<div class="dropcontent">
 					<a href="/projects/java.html">Java</a>
-                    <a href="/projects/python.html">Python</a>
-                    <a href="/projects/webdev.html">HTML/CSS</a>
+					<a href="/projects/python.html">Python</a>
+					<a href="/projects/webdev.html">HTML/CSS</a>
 				</div>
 			</div>
+
+			<div class="dropdown theme-switch-drop">
+				<button class="dropbtn" id="theme-switch">Change Theme</button>
+					<div class="dropcontent" id="theme-menu">
+				  		<a href="#" data-theme="default">Default</a>
+				  		<a href="#" data-theme="light-theme">Light Theme</a>
+				  		<a href="#" data-theme="purple-theme">Purple Theme</a>
+				  		<a href="#" data-theme="armour-theme">Armour Theme</a>
+						<a href="#" data-theme="simpatico-theme">Simpatico Theme</a>
+					</div>
+			</div>		  
 		</div>
 
 		<div class="card">
@@ -49,7 +61,9 @@
 			<hr>
 		</div>
 		<footer id="footer">
-			<p>Copyright &copy; My Starting Website</p>
+			<p>Copyright &copy; I dont know what to put here yet</p>
 		</footer>
+
+		<script src="/theme-switch.js"></script>
 	</body>
 </html>
