--- a/public/index.html
+++ b/public/index.html
@@ -31,15 +31,14 @@
     </div>
     <div class="card">
       <hr>
-      <h1 class="subjects">Bio</h1>
+      <h1 class="subjects">About Me</h1>
       <div class="info">
         <p title="Bio" class="info">
-          According to all known laws of aviation, there is no way a bee should be able to fly.
-          Its wings are too small to getits fat little body off the ground. The bee, of course, flies anyway because bees don't care
-          what humans think is impossible. Yellow, black. Yellow, black. Yellow, black. Yellow, black. Ooh, black and yellow! Let's shake it up a little.
-          Barry! Breakfast is ready! Ooming! Hang on a second. Hello? - Barry? - Adam? - Oan you believe this is happening? - I can't. I'll pick you up.
-          Looking sharp. Use the stairs. Your father paid good money for those. Sorry. I'm excited. Here's the graduate. We're very proud of you, son.
-          A perfect report card, all B's. Very proud. Ma! I got a thing going here. - You got lint on your fuzz. - Ow! That's me!
+          Hello! I'm Terell Bernard Davis, a dedicated Computer Engineering student on the brink of graduation from Georgia Southern University. My academic journey has been a blend of innovation, technology, and creativity, leading me towards specializing in a domain where precision meets passion.
+
+          My fascination with technology extends beyond the classroom, diving into the realm of home networking and server hosting. From managing video game servers to running a media sharing website like Plex, each project is a new adventure. My curiosity didn't stop there; I ventured into the world of automation and found a drive that pushes me to streamline and innovate continually.
+
+          When I'm not tangled in wires or coding away, I express myself through music, playing the guitar and saxophone. These hobbies not only provide a creative outlet but also balance my technical pursuits with melodious harmony.
         </p>
       </div>
       <h1 class="subjects">Skills & Experience</h1>
