--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./assets/tails.ico" />
+    <link rel="icon" href="./assets/tdavis-small.ico" />
     <title>Terell Davis</title>
     <!-- Other head elements like meta tags can be added here -->
 </head>
